[package]
name = "a-3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4.6"
secp256k1 = { version = "0.29.0", features = ["rand-std", "hashes-std"] }
sha2 = "0.10"
ripemd160 = "0.9"
hex = "0.4"
rand = "0.8"
bs58 = "0.5.1"